<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ajibigad.erazer.activities.CreateExpenseActivity"
    tools:showIn="@layout/activity_create_expense">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/hint_title" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_layout_title">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:inputType="textMultiLine"
                android:hint="@string/hint_description" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_layout_description">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="numberDecimal"
                android:hint="@string/hint_cost" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_proof_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proof_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_below="@id/input_layout_cost" />

        <Spinner
            android:id="@+id/proof_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_layout_cost"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/tv_proof_type"
            android:drawSelectorOnTop="true"
            tools:entries="@array/proof_type_array" />

        <FrameLayout
            android:id="@+id/proof_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/proof_type_spinner">

            <LinearLayout
                android:id="@+id/proof_image_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="invisible">

                <Button
                    android:id="@+id/btn_select_proof_image"
                    android:text="Snap proof / Take from gallary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/iv_proof_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_proof_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_proof_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    android:inputType="textMultiLine"
                    android:hint="@string/hint_proof_description" />
            </android.support.design.widget.TextInputLayout>
        </FrameLayout>


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit_expense"
            android:background="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"
            android:layout_below="@id/proof_data" />

    </RelativeLayout>
</ScrollView>


