<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ajibigad.erazer.activities.ExpenseDetailsActivity"
    tools:showIn="@layout/activity_expense_details">

    <LinearLayout
        android:id="@+id/details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/activity_expense_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/expense_title_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="10dp"
                    android:text="@string/expense_title_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/expense_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_margin="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/expense_description_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="10dp"
                    android:text="@string/expense_description_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/expense_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_margin="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/expense_cost_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="10dp"
                    android:text="@string/expense_cost_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/expense_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_margin="10dp" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/expense_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="10dp"
                    android:text="@string/expense_date_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/expense_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_margin="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/expense_state_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="10dp"
                    android:text="@string/expense_state_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/expense_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    tools:text="PENDING"
                    android:textStyle="italic"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                    android:background="@color/colorStateLabel" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/expense_proof_type_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="10dp"
                    android:text="@string/expense_proof_type_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/expense_proof_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    tools:text="EMAIL"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                    android:background="@color/colorAccent" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/proof_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/expense_proof_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="10dp"
                    android:text="@string/expense_proof_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/expense_proof_description"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    android:fontFamily="serif-monospace"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:maxLines="4"
                    tools:text="beoiperigb\neoiondfind\nfngoiegriejgeor\nreourogi\nhgergoierhgerg" />

                <ImageView
                    android:id="@+id/expense_proof_image"
                    android:layout_width="250dp"
                    android:layout_height="150dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_margin="10dp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btn_approve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/approve"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Inverse"
                android:background="@color/colorPrimary"
                android:layout_margin="5dp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_decline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decline"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Inverse"
                android:background="@color/colorAccent"
                android:layout_margin="5dp"
                android:visibility="invisible" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_settle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/settle"
            android:visibility="invisible" />

    </LinearLayout>

    <include layout="@layout/progress_bar" />

</FrameLayout>

